--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Calculator Lite</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+    <div class="container">
+        <div class="grid-container">
+            <div class="part input">
+                <form action="" name="form">
+                    <input type="text" readonly></form>
+            </div>
+            <div class="part">C</div>
+            <div class="part">(</div>
+            <div class="part">)</div>
+            <div class="part">&larr;</div>
+            <div class="part">7</div>
+            <div class="part">8</div>
+            <div class="part">9</div>
+            <div class="part">&divide;</div>
+            <div class="part">4</div>
+            <div class="part">5</div>
+            <div class="part">6</div>
+            <div class="part">&times;</div>
+            <div class="part">1</div>
+            <div class="part">2</div>
+            <div class="part">3</div>
+            <div class="part">-</div>
+            <div class="part">0</div>
+            <div class="part">.</div>
+            <div class="part">=</div>
+            <div class="part">+</div>
+        </div>
+    </div>
 </body>
+
 </html>
